--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     padding: 0;
   }
   body{
-    background-image: url("Images/los.jpg");
+    background-image: url(Images/los.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
